Some small test improvements.